<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Call Statistics</string>
    <string name="menu_main">Home</string>
    <string name="menu_total_statistic">Statistics</string>


    <string-array name="update_db_text">
        <item>Updating the database</item>
        <item>Updating the database.</item>
        <item>Updating the database..</item>
        <item tools:ignore="TypographyEllipsis">Updating the database...</item>
    </string-array>

    <string name="analyticalPieChartAmount">Total</string>
    <string name="header_top_incoming">Top 10 incoming:</string>
    <string name="header_top_outgoing">Top 10 outgoing:</string>
    <string name="header_longest_incoming">Longest incoming:</string>
    <string name="header_longest_outgoing">Longest outgoing:</string>
    <string name="hour_short">h</string>
    <string name="minute_short">m</string>
    <string name="second_short">s</string>
    <string name="day_short">d</string>
    <string name="label_contact_with_colon">Contact:</string>
    <string name="label_phone_number_with_colon">Phone:</string>
    <string name="label_duration_with_colon">Duration:</string>
    <string name="label_type_with_colon">Ring type:</string>
    <string name="label_date_with_colon">Date:</string>
    <string name="label_time_with_colon">Time:</string>

    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="missed">Missed</string>
    <string name="voice_email">Voicemail</string>
    <string name="rejected">Rejected</string>
    <string name="blocked">Blocked</string>
    <string name="answered_externally">Received on another device</string>
    <string name="unknown">Unknown</string>

    <string name="label_total_duration">Total duration</string>
    <string name="label_total_phone_talk">Total calls:</string>
    <string name="label_total_time_talk">Talk time:</string>
    <string name="label_total_calls">Total calls:</string>
    <string name="header_with_longest_incoming">Top contacts by length of incoming:</string>
    <string name="header_with_longest_outgoing">Top contacts by outgoing duration:</string>
    <string name="label_count_calls_with_incoming">Number of incoming contacts:</string>
    <string name="label_total_incoming">Total incoming:</string>
    <string name="label_stat_by">"for "</string>
    <string name="label_choose_day">Choose day</string>
    <string name="home_title">Basic</string>
    <string name="label_total_number">Total numbers:</string>
    <string name="label_of_them">of which:</string>
    <string name="label_today">Today</string>
    <string name="label_yesterday">Yesterday</string>
    <string name="label_count_calls_with_outgoing">Number of outgoing contacts:</string>
    <string name="label_total_outgoing">Total outgoing:</string>
    <string name="label_db_update" tools:ignore="TypographyEllipsis">Updating the database...</string>
    <string name="pop_up_launch_title">Important</string>
    <string name="pop_up_launch_content">Now you will be asked for permission to access the call log.\nThis permission is necessary for the application to work, since the only function of the application is call statistics, for further operation of the application you must provide this permission.\nAll information about calls will be stored exclusively on your device, without transfer anywhere.</string>
    <string name="ok">OK</string>
    <string name="pop_up_info_content">We will now create a local database based on the call log.\nThis process will take several minutes, depending on the size of the call log.\nAt this time, the application can be minimized, but not closed.</string>
    <string name="update_database">Database update</string>
    <string name="label_average_duration">Average duration</string>
    <string name="backup">Backup</string>
    <string name="label_save_to_google_drive">Backup on Google Drive</string>
    <string name="pop_up_overwrite_content">A previous version of the database backup already exists on the disk. Overwrite database file?</string>
    <string name="no">No</string>
    <string name="pop_up_saved_success_title">Success</string>
    <string name="pop_up_saved_success_content">Database backup successfully saved</string>
    <string name="pop_up_saved_error_title">Error</string>
    <string name="pop_up_saved_error_content">Error when saving a database backup:</string>
    <string name="pop_up_backup_error_title">Failed</string>
    <string name="pop_up_backup_error_content_folder">Failed to load backup: there is no backup folder on the disk</string>
    <string name="pop_up_backup_error_content_file">Failed to load backup: the backup file is missing on the disk</string>
    <string name="pop_up_load_success_title">Success</string>
    <string name="pop_up_load_success_content">Backup uploaded successfully\nLocal database updated</string>
    <string name="pop_up_load_error_title">Failed</string>
    <string name="pop_up_load_error_content">An error occurred while loading the backup:</string>
    <string name="label_save">Save</string>
    <string name="label_load">Load</string>
    <string name="text_back">Back</string>
    <string-array name="analyticalPieChartColorArray">
        <item>#E480F4</item>
        <item>#6CC3F3</item>
        <item>#7167ED</item>
        <item>#D9455F</item>
        <item>#6054EA</item>
    </string-array>

    <string-array name="analyticalPieChartColorArray2">
        <item>#58D984</item>
        <item>#D9455F</item>
    </string-array>

    <string-array name="analyticalPieChartColorArray3">
        <item>#65ae07</item>
        <item>#dafd95</item>
        <item>#306400</item>
    </string-array>

    <string-array name="analyticalPieChartColorArray5">
        <item>#81BECE</item>
        <item>#E9E9E9</item>
        <item>#E38664</item>
        <item>#e4d6f8</item>
        <item>#5BA0BF</item>
        <item>#aaa2d8</item>
        <item>#a27eb8</item>
        <item>#ED413E</item>
        <item>#EFB786</item>
        <item>#604d9e</item>
    </string-array>

    <string-array name="analyticalPieChartColorArray6">
        <item>#DD2255</item>
        <item>#FC5F6A</item>
        <item>#E7242D</item>
        <item>#F3BFC3</item>
    </string-array>
</resources>