<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_main_ui"
    android:background="@color/dark_black"
    tools:context=".view.fragments.DetailPhoneTalkFragment">

    <TextView
        android:id="@+id/labelContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_contact_with_colon"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Сергей Ваильевич"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelContactName"
        app:layout_constraintStart_toEndOf="@id/labelContactName"/>

    <TextView
        android:id="@+id/labelPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number_with_colon"
        style="@style/Level2"
        android:layout_marginTop="@dimen/margin_lvl_2"
        app:layout_constraintTop_toBottomOf="@id/labelContactName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+79640937573"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelPhoneNumber"
        app:layout_constraintStart_toEndOf="@id/labelPhoneNumber"/>



    <TextView
        android:id="@+id/labelType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_type_with_colon"
        style="@style/Level2"
        android:layout_marginTop="@dimen/margin_lvl_2"
        app:layout_constraintTop_toBottomOf="@id/labelPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Входящий"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelType"
        app:layout_constraintStart_toEndOf="@id/labelType"/>

    <TextView
        android:id="@+id/labelDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_duration_with_colon"
        style="@style/Level2"
        android:layout_marginTop="@dimen/margin_lvl_2"
        app:layout_constraintTop_toBottomOf="@id/labelType"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25м 54с"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelDuration"
        app:layout_constraintStart_toEndOf="@id/labelDuration"/>

    <TextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_with_colon"
        style="@style/Level2"
        android:layout_marginTop="@dimen/margin_lvl_2"
        app:layout_constraintTop_toBottomOf="@id/labelDuration"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="14.03.2022"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelDate"
        app:layout_constraintStart_toEndOf="@id/labelDate"/>

    <TextView
        android:id="@+id/labelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time_with_colon"
        style="@style/Level2"
        android:layout_marginTop="@dimen/margin_lvl_2"
        app:layout_constraintTop_toBottomOf="@id/labelDate"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:45"
        android:layout_marginStart="@dimen/margin_lvl_2"
        style="@style/Level2"
        app:layout_constraintTop_toTopOf="@id/labelTime"
        app:layout_constraintStart_toEndOf="@id/labelTime"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/invisible"
        android:src="@drawable/ic_cancel"
        android:layout_marginTop="@dimen/label_text_lvl_3"
        app:layout_constraintTop_toBottomOf="@id/labelTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>