<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <evgeniy.ryzhikov.callstatistics.ui.customview.ActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="10dp"
        android:orientation="vertical"
        android:requiresFadingEdge="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_in_cards">

            <LinearLayout
                android:id="@+id/chartCallsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/margin_in_cards"
                android:background="@drawable/chart_background"
                android:elevation="@dimen/cards_elevation"
                android:padding="@dimen/margin_in_cards">

                <evgeniy.ryzhikov.callstatistics.ui.customview.AnalyticalPieChart.AnalyticalPieChart
                    android:id="@+id/chartCalls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:pieChartCircleSectionSpace="2"
                    app:pieChartCircleStrokeWidth="6dp"
                    app:pieChartColors="@array/analyticalPieChartColorArray"
                    app:pieChartTextAmount="@string/label_total_calls"
                    app:pieChartTextAmountColor="@color/white"
                    app:pieChartTextDescriptionColor="@color/text"
                    app:pieChartTextDescriptionSize="14sp"
                    app:pieChartTextNumberColor="@color/white"
                    app:pieChartTextNumberSize="16sp"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/totalDurationContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_edge"
                android:layout_marginTop="@dimen/margin_in_cards"
                android:background="@drawable/chart_background"
                android:elevation="@dimen/cards_elevation"
                android:orientation="vertical"
                android:padding="@dimen/margin_in_cards">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_edge"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_edge"
                    android:layout_marginBottom="@dimen/margin_edge"
                    android:elevation="@dimen/cards_elevation"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="@dimen/cards_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/labelTotalDuration"
                            style="@style/Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_in_cards"
                            android:layout_marginTop="@dimen/margin_in_cards"
                            android:text="@string/label_total_duration"
                            android:textColor="@color/text" />

                        <TextView
                            android:id="@+id/tvTotalDuration"
                            style="@style/Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_in_cards"
                            android:layout_marginTop="@dimen/margin_in_cards"
                            android:layout_marginBottom="@dimen/margin_in_cards"
                            tools:text="7д 5ч 1м 24с" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/label_of_them"
                    style="@style/Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_edge"
                    android:text="@string/label_of_them" />

                <evgeniy.ryzhikov.callstatistics.ui.customview.AnalyticalPieChart.AnalyticalPieChart
                    android:id="@+id/chartDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:pieChartCircleSectionSpace="2"
                    app:pieChartCircleStrokeWidth="6dp"
                    app:pieChartColors="@array/analyticalPieChartColorArray"
                    app:pieChartTextAmount="@string/analyticalPieChartAmount"
                    app:pieChartTextAmountColor="@color/white"
                    app:pieChartTextDescriptionColor="@color/text"
                    app:pieChartTextDescriptionSize="14sp"
                    app:pieChartTextNumberColor="@color/white"
                    app:pieChartTextNumberSize="16sp"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/averageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_edge"
                android:layout_marginTop="@dimen/margin_in_cards"
                android:background="@drawable/chart_background"
                android:elevation="@dimen/cards_elevation"
                android:orientation="vertical"
                android:padding="@dimen/margin_in_cards"
                android:layout_marginBottom="@dimen/margin_in_cards">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_edge"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/margin_edge"
                    android:layout_marginBottom="@dimen/margin_edge"
                    android:elevation="@dimen/cards_elevation"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="@dimen/cards_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/labelAverageDuration"
                            style="@style/Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_in_cards"
                            android:layout_marginTop="@dimen/margin_in_cards"
                            android:text="@string/label_average_duration"
                            android:textColor="@color/text" />

                        <TextView
                            android:id="@+id/tvAverageDuration"
                            style="@style/Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_in_cards"
                            android:layout_marginTop="@dimen/margin_in_cards"
                            android:layout_marginBottom="@dimen/margin_in_cards"
                            tools:text="7д 5ч 1м 24с" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/labelAverangeIncoming"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incoming"
                    android:layout_marginHorizontal="16dp"/>

                <com.mackhartley.roundedprogressbar.RoundedProgressBar
                    android:id="@+id/incomingAverage"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    app:rpbBackgroundColor="@android:color/transparent"
                    app:rpbBackgroundTextColor="@color/blue_main"
                    app:rpbCornerRadius="20dp"
                    app:rpbShowProgressText="false"
                    android:layout_marginTop="8dp"
                    app:rpbProgressColor="@color/blue_main"
                    app:rpbProgressTextColor="@color/text"
                    app:rpbTextPadding="12dp"
                    android:layout_marginHorizontal="16dp"/>

                <TextView
                    android:id="@+id/labelAverangeOutgoing"
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/outgoing"
                    android:layout_marginHorizontal="16dp"/>

                <com.mackhartley.roundedprogressbar.RoundedProgressBar
                    android:id="@+id/outgoingAverage"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginBottom="16dp"
                    app:rpbBackgroundColor="@android:color/transparent"
                    app:rpbBackgroundTextColor="@color/white"
                    app:rpbCornerRadius="20dp"
                    app:rpbShowProgressText="false"
                    android:layout_marginTop="8dp"
                    app:rpbProgressColor="@color/purple_main"
                    app:rpbProgressTextColor="@color/text"
                    app:rpbTextPadding="12dp"
                    android:layout_marginHorizontal="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>